Созданы черновики секций - header, calendar, camp и hut

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -28,6 +28,11 @@ body textarea:required:valid
 	color: #666
 
 //Custom Styles Here
+.section
+	padding: 80px 0
+@import "calendar"
+@import "camp"
+@import "hut"
 
 
 //ALWAYS END
