--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -35,6 +35,9 @@
 		-o-animation: none !important
 		-ms-animation: none !important
 		animation: none !important
+	
+	.calendar
+		display: none
 
 
 /* Extra Small Devices, Phones */
@@ -45,7 +48,8 @@
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
-
+	.h2
+		font-size: 22px
 
 /*==========  Mobile First Method  ==========*/
 
