--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,3 +1,4 @@
 @import "bourbon"
 
 +font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
++font-face("RussoOne", "../fonts/RussoOne/RussoOne", $file-formats: ttf woff ttf)
