--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,13 +1,42 @@
-@import "bourbon"
-@import "vars.sass"
+@import 'bourbon'
+@import 'vars.sass'
+@import '../app/css/reset-css.css'
+@import 'defoult'
 
 body
-	font-size: 16px
-	min-width: 320px
-	position: relative
-	line-height: 1.6
-	font-family: "RobotoRegular", sans-serif
-	overflow-x: hidden
+	height: 100%
 
-.hidden
-	display: none
+.header
+	align-items: center
+	background: $color-accent url('../img/header-bg.jpg') no-repeat 12% 80%
+	background-size: cover
+	display: flex
+	height: 100vh
+	min-height: 600px
+	padding: 80px 0
+	.content
+		margin-left: auto
+
+.content
+	background: rgba(0, 0, 0, .5)
+	color: #fff
+	max-width: 500px
+	padding: 20px
+
+.h1
+	display: inline-block
+	font-family: 'RussoOne'
+	font-size: 38px
+	margin-bottom: 20px
+	padding: 0 15px
+
+.select
+	background: $color-accent
+	color: #222
+
+@media only screen and (max-width : 320px)
+	/**/
+	.header
+		align-items: flex-start
+	.h1
+		font-size: 24px
