Добавлена и настроена Яндекс карта, подключен superfish

--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -1,5 +1,5 @@
 .camp
-	background: #fff url('../img/camp-bg.jpg') no-repeat center
+	background: #fff url('../img/camp-bg.jpg') no-repeat center center
 	background-size: cover
 	height: 100vh
 	min-height: 600px
@@ -10,7 +10,7 @@
 	display: inline-block
 	font-family: 'RussoOne'
 	font-size: 34px
-	padding: 0 15px
+	// padding: 0 15px
 	margin-bottom: 20px
 
 .btn
@@ -23,4 +23,4 @@
 	&:hover
 		text-decoration: none
 		color: inherit
-		background: #60712A
+		background: #222
