--- a/sass/_hut.sass
+++ b/sass/_hut.sass
@@ -1,5 +1,5 @@
 .hut
-	background: #fff url('../img/hut-bg.jpg') no-repeat center
+	background: #fff url('../img/hut-bg.jpg') no-repeat 30% center
 	background-size: cover
 	height: 100vh
 	min-height: 600px
