--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,8 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	.toogle-contacts
+		display: inline-block
 
 
 /* Small Devices, Tablets */
