--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,8 +1,8 @@
-@import "bourbon"
-@import "vars.sass"
+@import 'bourbon'
+@import 'vars.sass'
 
 //Load Libs SASS
-@import "app/libs/animate/animate.sass"
+@import 'app/libs/animate/animate.sass'
 
 *::-webkit-input-placeholder
 	color: #666
@@ -29,11 +29,14 @@ body textarea:required:valid
 
 //Custom Styles Here
 .section
-	padding: 80px 0
-@import "calendar"
-@import "camp"
-@import "hut"
+	padding-top: 120px
+	padding-bottom: 80px
+@import 'calendar'
+@import 'camp'
+@import 'hut'
+@import 'map'
+@import 'contacts'
 
 
 //ALWAYS END
-@import "media"
+@import 'media'
