Подключил font-awesome

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -4,6 +4,7 @@
 @import 'defoult'
 @import '../app/libs/superfish/css/superfish.css'
 @import 'top-bar'
+@import 'app/libs/font-awesome-4.6.3/sass/font-awesome.sass'
 
 body
 	height: 100%
