--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -22,6 +22,7 @@
 	margin: 0
 	margin-left: auto
 	position: relative
+	width: auto
 	li
 		background: $color-accent
 		margin-right: 2px
@@ -29,6 +30,8 @@
 		padding: 0.3em 0.5em
 		color: #222
 		text-decoration: none
+	>li>a
+		border: none
 
 @media only screen and (max-width : 768px)
 	.top-bar
