--- a/sass/header.sass
+++ b/sass/header.sass
@@ -3,6 +3,7 @@
 @import '../app/css/reset-css.css'
 @import 'defoult'
 @import '../app/libs/superfish/css/superfish.css'
+@import '../app/libs/superfish/css/megafish.css'
 @import 'top-bar'
 @import 'app/libs/font-awesome-4.6.3/sass/font-awesome.sass'
 
