--- a/sass/_toggle-mnu.sass
+++ b/sass/_toggle-mnu.sass
@@ -1,37 +1,50 @@
 .toggle-mnu 
-  display: block
-  width: 28px
-  height: 28px
-  // margin-top: 14px
-  background: #222
+	width: 34px
+	height: 34px
+	background: $color-accent
+	padding: 3px
+	position: fixed
+	z-index: 2
+	top: 20px
+	right: 20px
 
-  span:after, span:before 
-    content: ""
-    position: absolute
-    left: 0
-    top: 9px
+	span:after, span:before 
+		content: ""
+		position: absolute
+		left: 0
+		top: 9px
 
-  span:after
-    top: 18px
+	span:after
+		top: 18px
 
-  span 
-    position: relative
-    display: block
+	span 
+		position: relative
+		display: block
+		margin-top: 4px
 
-  span, span:after, span:before
-    width: 100%
-    height: 2px
-    background-color: #fff
-    transition: all 0.3s
-    backface-visibility: hidden
-    border-radius: 2px
+	span, span:after, span:before
+		width: 100%
+		height: 2px
+		background-color: #222
+		transition: all 0.3s
+		backface-visibility: hidden
+		border-radius: 2px
 
 
-  &.on span 
-    background-color: transparent
+	&.on span 
+		background-color: transparent
 
-  &.on span:before 
-    transform: rotate(45deg) translate(-1px, 0px)
+	&.on span:before 
+		transform: rotate(45deg) translate(-1px, 0px)
 
-  &.on span:after 
-    transform: rotate(-45deg) translate(6px, -7px)
+	&.on span:after 
+		transform: rotate(-45deg) translate(6px, -7px)
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 993px)
+	/**/
+	.toggle-mnu, #mobile-menu, html.mm-blocking #mm-blocker
+		display: none
+
+	html.mm-opening .mm-slideout
+		transform: translate(0px, 0px)
