Практически закончено меню

--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -51,6 +51,94 @@
 	transition: none
 	a
 		color: #fff
+
+.sf-mega
+	background: rgba(0,0,0, .5)
+	color: #fff
+	padding: 15px
+	.select
+		position: absolute
+		top: 5px
+		left: 5px
+		// right: 5px
+
+.sf-mega,.mnu>li>ul
+	margin-top: -12px
+	
+.camp__section
+	position: relative
+	height: 150px
+	&::before
+		position: absolute
+		content: ''
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		background: rgba(0,0,0, .3)
+	&:hover
+		&::before
+			background: rgba(0,0,0,0)
+
+// Фото
+.camp__section-1
+	background: #222 url('/img/camp__section-1.jpg') no-repeat center
+	background-size: cover
+
+// Видео
+.camp__section-2
+	background: #222 url('/img/camp__section-2.jpg') no-repeat center
+	background-size: cover
+
+// Рассписание заездов
+.camp__section-3
+	background: #222 url('/img/camp__section-3.jpg') no-repeat center
+	background-size: cover
+
+// Распорядок дня
+.camp__section-4
+	background: #222 url('/img/camp__section-4.jpg') no-repeat center
+	background-size: cover
+
+// Выездные экскурсии
+.camp__section-5
+	background: #222 url('/img/camp__section-5.jpg') no-repeat center
+	background-size: cover
+
+// Условия проживания
+.camp__section-6
+	background: #222 url('/img/camp__section-6.jpg') no-repeat center
+	background-size: cover
+
+// Питание
+.camp__section-7
+	background: #222 url('/img/camp__section-7.jpg') no-repeat center
+	background-size: cover
+
+// Награды лагеря
+.camp__section-8
+	background: #222 url('/img/camp__section-8.jpg') no-repeat center
+	background-size: cover
+
+// Цены
+.camp__section-9
+	background: #222 url('/img/camp__section-9.jpg') no-repeat center
+	background-size: cover
+
+// Оформление
+.camp__section-10
+	background: #222 url('/img/camp__section-10.jpg') no-repeat center
+	background-size: cover
+
+// Что взять с собой
+.camp__section-11
+	background: #222 url('/img/camp__section-11.jpg') no-repeat center
+	background-size: cover
+
+// Посещение ребёнка
+.camp__section-12
+	background: #222 url('/img/camp__section-12.jpg') no-repeat center
+	background-size: cover
 	
 
 @media only screen and (max-width : 768px)
