--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -64,8 +64,11 @@
 
 .sf-mega,.mnu>li>ul
 	margin-top: -12px
-	
+
+
+// a.camp__section
 .camp__section
+	display: block
 	position: relative
 	height: 150px
 	&::before
