Подключил RobotoBold, создал footer, создал страници Детский лагерь, debug pjax

--- a/app/libs/superfish/css/superfish.css
+++ b/app/libs/superfish/css/superfish.css
@@ -33,20 +33,20 @@
 
  
 /*** DEMO SKIN ***/
- .sf-menu li {
+/*  .sf-menu li {
 	background: #BDD2FF;
 	white-space: nowrap; no need for Supersubs plugin
 	*white-space: normal; ...unless you support IE7 (let it wrap)
 	-webkit-transition: background .2s;
 	transition: background .2s;
 } 
- .sf-menu ul li {
+.sf-menu ul li {
 	background: #AABDE6;
 } 
- .sf-menu ul ul li {
+.sf-menu ul ul li {
 	background: #9AAEDB;
 } 
- .sf-menu li:hover,
+.sf-menu li:hover,
 .sf-menu li.sfHover {
 	background: #CFDEFF;
 	only transition out, not in
@@ -54,13 +54,13 @@
 	transition: none;
 } 
 
-/*** arrows (for all except IE7) **/
- .sf-arrows .sf-with-ul {
+** arrows (for all except IE7) *
+.sf-arrows .sf-with-ul {
 	padding-right: 2.5em;
 	*padding-right: 1em; no CSS arrows for IE7 (lack pseudo-elements)
 } 
-/*styling for both css and generated arrows*/
- .sf-arrows .sf-with-ul:after {
+styling for both css and generated arrows
+.sf-arrows .sf-with-ul:after {
 	content: '';
 	position: absolute;
 	top: 50%;
@@ -73,22 +73,22 @@
 	border-top-color: #dFeEFF; edit this to suit design (no rgba in IE8)
 	border-top-color: rgba(255,255,255,.5);
 } 
- .sf-arrows > li > .sf-with-ul:focus:after,
+.sf-arrows > li > .sf-with-ul:focus:after,
 .sf-arrows > li:hover > .sf-with-ul:after,
 .sf-arrows > .sfHover > .sf-with-ul:after {
 	border-top-color: white; IE8 fallback colour
 } 
-/*styling for right-facing arrows*/
- .sf-arrows ul .sf-with-ul:after {
+styling for right-facing arrows
+.sf-arrows ul .sf-with-ul:after {
 	margin-top: -5px;
 	margin-right: -3px;
 	border-color: transparent;
 	border-left-color: #dFeEFF; edit this to suit design (no rgba in IE8)
 	border-left-color: rgba(255,255,255,.5);
 } 
- .sf-arrows ul li > .sf-with-ul:focus:after,
+.sf-arrows ul li > .sf-with-ul:focus:after,
 .sf-arrows ul li:hover > .sf-with-ul:after,
 .sf-arrows ul .sfHover > .sf-with-ul:after {
 	border-left-color: white;
 } 
- 
+ */
