--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,4 +1,5 @@
 @import "bourbon"
 
 +font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
++font-face("RobotoBold", "../fonts/RobotoBold/RobotoBold", $file-formats: woff woff2 ttf)
 +font-face("RussoOne", "../fonts/RussoOne/RussoOne", $file-formats: ttf woff ttf)
