--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -56,21 +56,67 @@
 	background: rgba(0,0,0, .5)
 	color: #fff
 	padding: 15px
-	.select
-		position: absolute
-		top: 5px
-		left: 5px
-		// right: 5px
 
 .sf-mega,.mnu>li>ul
 	margin-top: -12px
 
 
 // a.camp__section
+
+
+// Фото
+.camp__section-1
+	background: #222 url('/img/camp__section-1.jpg') no-repeat center
+
+// Видео
+.camp__section-2
+	background: #222 url('/img/camp__section-2.jpg') no-repeat center
+
+// Рассписание заездов
+.camp__section-3
+	background: #222 url('/img/camp__section-3.jpg') no-repeat center
+
+// Распорядок дня
+.camp__section-4
+	background: #222 url('/img/camp__section-4.jpg') no-repeat center
+
+// Выездные экскурсии
+.camp__section-5
+	background: #222 url('/img/camp__section-5.jpg') no-repeat center
+
+// Условия проживания
+.camp__section-6
+	background: #222 url('/img/camp__section-6.jpg') no-repeat center
+
+// Питание
+.camp__section-7
+	background: #222 url('/img/camp__section-7.jpg') no-repeat center
+
+// Награды лагеря
+.camp__section-8
+	background: #222 url('/img/camp__section-8.jpg') no-repeat center
+
+// Цены
+.camp__section-9
+	background: #222 url('/img/camp__section-9.jpg') no-repeat center
+
+// Оформление
+.camp__section-10
+	background: #222 url('/img/camp__section-10.jpg') no-repeat center
+
+// Что взять с собой
+.camp__section-11
+	background: #222 url('/img/camp__section-11.jpg') no-repeat center
+
+// Посещение ребёнка
+.camp__section-12
+	background: #222 url('/img/camp__section-12.jpg') no-repeat center
+	
 .camp__section
 	display: block
 	position: relative
 	height: 150px
+	background-size: cover
 	&::before
 		position: absolute
 		content: ''
@@ -82,67 +128,9 @@
 	&:hover
 		&::before
 			background: rgba(0,0,0,0)
-
-// Фото
-.camp__section-1
-	background: #222 url('/img/camp__section-1.jpg') no-repeat center
-	background-size: cover
-
-// Видео
-.camp__section-2
-	background: #222 url('/img/camp__section-2.jpg') no-repeat center
-	background-size: cover
-
-// Рассписание заездов
-.camp__section-3
-	background: #222 url('/img/camp__section-3.jpg') no-repeat center
-	background-size: cover
-
-// Распорядок дня
-.camp__section-4
-	background: #222 url('/img/camp__section-4.jpg') no-repeat center
-	background-size: cover
-
-// Выездные экскурсии
-.camp__section-5
-	background: #222 url('/img/camp__section-5.jpg') no-repeat center
-	background-size: cover
-
-// Условия проживания
-.camp__section-6
-	background: #222 url('/img/camp__section-6.jpg') no-repeat center
-	background-size: cover
-
-// Питание
-.camp__section-7
-	background: #222 url('/img/camp__section-7.jpg') no-repeat center
-	background-size: cover
-
-// Награды лагеря
-.camp__section-8
-	background: #222 url('/img/camp__section-8.jpg') no-repeat center
-	background-size: cover
-
-// Цены
-.camp__section-9
-	background: #222 url('/img/camp__section-9.jpg') no-repeat center
-	background-size: cover
-
-// Оформление
-.camp__section-10
-	background: #222 url('/img/camp__section-10.jpg') no-repeat center
-	background-size: cover
-
-// Что взять с собой
-.camp__section-11
-	background: #222 url('/img/camp__section-11.jpg') no-repeat center
-	background-size: cover
-
-// Посещение ребёнка
-.camp__section-12
-	background: #222 url('/img/camp__section-12.jpg') no-repeat center
-	background-size: cover
-	
+	.select
+		position: relative
+		z-index: 1		
 
 @media only screen and (max-width : 768px)
 	.top-bar
