Каркас страницы детского лагеря и частичное заполнение

--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -20,7 +20,55 @@
 	background: $color-accent
 	padding: 10px
 	margin: 10px
-	&:hover
+	&:hover, &:active, &:focus
 		text-decoration: none
 		color: inherit
 		background: #222
+
+.section__camp-1
+	background: #fff	url('../img/camp__section-1.jpg') no-repeat center
+
+.section__camp-2
+	// background: #fff	url('../img/camp__section-1.jpg') no-repeat center
+
+.section__camp-3
+	background: #fff	url('../img/camp__section-3.jpg') no-repeat 
+
+.section__camp-4
+	background: #fff	url('../img/camp__section-4.jpg') no-repeat 
+
+.table-wrap
+	max-height: 60vh
+	overflow-y: auto
+
+.table
+	width: 100%
+.tr:nth-last-of-type(2n+1)
+	background: #DAE2BF
+	color: #222
+.tr:nth-last-of-type(2n)
+	background: #E6ECD4
+	color: #222
+
+.th
+	text-align: center
+.td
+	padding: 0.2em 0.5em
+
+.section__camp-4
+	// background: #fff	url('../img/camp__section-4.jpg') no-repeat center
+	td:first-of-type
+		width: 130px
+.section__camp-6
+	background: #fff	url('../img/camp__section-6.jpg') no-repeat center
+
+.section__camp-7
+	background: #fff	url('../img/camp__section-7.jpg') no-repeat center
+
+.section__camp-12
+	background: #fff	url('../img/camp__section-12.jpg') no-repeat center top
+
+.section__camp
+	background-size: cover
+	height: 100vh
+	min-height: 600px
