--- a/sass/_contacts.sass
+++ b/sass/_contacts.sass
@@ -4,7 +4,7 @@
 	position: relative
 	// z-index: 0
 	position: relative
-	padding-top: 77px
+	padding-top: 0
 	padding-bottom: 0
 	.content
 		position: absolute
