--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -38,6 +38,9 @@
 		-ms-animation: none !important
 		animation: none !important
 
+	.camp__section::before
+		background: rgba(0,0,0,0)
+
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
