--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -66,57 +66,58 @@
 
 // Фото
 .camp__section-1
-	background: #222 url('/img/camp__section-1.jpg') no-repeat center
+	background: #222 url('/img/camp__section-1-min.jpg') no-repeat center
 
 // Видео
 .camp__section-2
-	background: #222 url('/img/camp__section-2.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-2-min.jpg') no-repeat center
 
 // Рассписание заездов
 .camp__section-3
-	background: #222 url('/img/camp__section-3.jpg') no-repeat center
+	background: #222 url('/img/camp__section-3-min.jpg') no-repeat top left
 
 // Распорядок дня
 .camp__section-4
-	background: #222 url('/img/camp__section-4.jpg') no-repeat center
+	background: #222 url('/img/camp__section-4-min.jpg') no-repeat top left
 
 // Выездные экскурсии
 .camp__section-5
-	background: #222 url('/img/camp__section-5.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-5-min.jpg') no-repeat center
 
 // Условия проживания
 .camp__section-6
-	background: #222 url('/img/camp__section-6.jpg') no-repeat center
+	background: #222 url('/img/camp__section-6-min.jpg') no-repeat center
 
 // Питание
 .camp__section-7
-	background: #222 url('/img/camp__section-7.jpg') no-repeat center
+	background: #222 url('/img/camp__section-7-min.jpg') no-repeat center
 
 // Награды лагеря
 .camp__section-8
-	background: #222 url('/img/camp__section-8.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-8-min.jpg') no-repeat center
 
 // Цены
 .camp__section-9
-	background: #222 url('/img/camp__section-9.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-9-min.jpg') no-repeat center
 
 // Оформление
 .camp__section-10
-	background: #222 url('/img/camp__section-10.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-10-min.jpg') no-repeat center
 
 // Что взять с собой
 .camp__section-11
-	background: #222 url('/img/camp__section-11.jpg') no-repeat center
+	// background: #222 url('/img/camp__section-11-min.jpg') no-repeat center
 
 // Посещение ребёнка
 .camp__section-12
-	background: #222 url('/img/camp__section-12.jpg') no-repeat center
+	background: #222 url('/img/camp__section-12-min.jpg') no-repeat center
 	
 .camp__section
 	display: block
 	position: relative
 	height: 150px
 	background-size: cover
+	font-size: 16px
 	&::before
 		position: absolute
 		content: ''
@@ -130,7 +131,7 @@
 			background: rgba(0,0,0,0)
 	.select
 		position: relative
-		z-index: 1		
+		z-index: 1
 
 @media only screen and (max-width : 768px)
 	.top-bar
