Разработан раздел - Что взять с собой, добавлен robots.txt убран последний margin-bottom в .content

--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -38,17 +38,17 @@
 	background: #fff	url('../img/camp__section-4.jpg') no-repeat 
 
 .table-wrap
-	max-height: 60vh
+	max-height: 50vh
 	overflow-y: auto
 
 .table
 	width: 100%
 
 .tr:nth-child(odd)
-	background: #DAE2BF
+	background: $color-a
 	color: #222
 .tr:nth-child(even)
-	background: #E6ECD4
+	background: $color-b
 	color: #222
 .tr:nth-child(odd), .tr:nth-child(even)
 	&:hover
@@ -69,6 +69,9 @@
 
 .section__camp-7
 	background: #fff	url('../img/camp__section-7.jpg') no-repeat center
+
+.section__camp-11
+	background: #fff	url('../img/camp__section-11.jpg') no-repeat center
 
 .section__camp-12
 	background: #fff	url('../img/camp__section-12.jpg') no-repeat center top
