--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -106,7 +106,7 @@
 
 // Что взять с собой
 .camp__section-11
-	// background: #222 url('/img/camp__section-11-min.jpg') no-repeat center
+	background: #222 url('/img/camp__section-11-min.jpg') no-repeat top left
 
 // Посещение ребёнка
 .camp__section-12
@@ -125,10 +125,10 @@
 		left: 0
 		right: 0
 		bottom: 0
-		background: rgba(0,0,0, .3)
+		background: rgba(0,0,0,0)
 	&:hover
 		&::before
-			background: rgba(0,0,0,0)
+			background: rgba(250,250,250, .3)
 	.select
 		position: relative
 		z-index: 1
