Добавлена страница - База отдыха, добавлен и изменён контент в разделах - цена, оформление ребёнка, что взять с собой, посещение ребёнка

--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -37,7 +37,7 @@
 .section__camp-4
 	background: #fff	url('../img/camp__section-4.jpg') no-repeat 
 
-.table-wrap
+.scroll-wrap
 	max-height: 50vh
 	overflow-y: auto
 
