--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -110,7 +110,7 @@
 
 // Посещение ребёнка
 .camp__section-12
-	background: #222 url('/img/camp__section-12-min.jpg') no-repeat center
+	background: #222 url('/img/camp__section-12-min.jpg') no-repeat top left
 	
 .camp__section
 	display: block
