--- a/sass/header.sass
+++ b/sass/header.sass
@@ -18,6 +18,9 @@ body
 .detskij-lager__header
 	background: #fff url('../img/camp-bg.jpg') no-repeat 12% 80%
 
+.bazaotdihabelgorod__header
+	background: #fff url('../img/hut-bg.jpg') no-repeat center
+
 .header
 	align-items: center
 	background-size: cover
@@ -53,6 +56,8 @@ body
 	color: #fff
 	max-width: 500px
 	padding: 20px
+
+.content, .scroll-wrap
 	>*:last-child
 		margin-bottom: 0
 
@@ -60,11 +65,11 @@ body
 	display: inline-block
 	font-family: 'RussoOne'
 	font-size: 38px
-	margin-bottom: 20px
-	// padding: 0 15px
 
 .p
 	text-align: justify
+
+.h1, .p, .scroll-wrap
 	margin-bottom: 20px
 
 .select, .th
