--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -29,13 +29,19 @@
 	background: #fff	url('../img/camp__section-1.jpg') no-repeat center
 
 .section__camp-2
-	// background: #fff	url('../img/camp__section-1.jpg') no-repeat center
+	// background: #fff	url('../img/camp__section-2.jpg') no-repeat center
 
 .section__camp-3
-	background: #fff	url('../img/camp__section-3.jpg') no-repeat 
+	background: #fff	url('../img/camp__section-3.jpg') no-repeat
 
 .section__camp-4
-	background: #fff	url('../img/camp__section-4.jpg') no-repeat 
+	background: #fff	url('../img/camp__section-4.jpg') no-repeat
+
+.section__camp-9
+	background: #fff	url('../img/camp__section-9.jpg') no-repeat
+
+.section__camp-10
+	background: #fff	url('../img/camp__section-10.jpg') no-repeat
 
 .scroll-wrap
 	max-height: 50vh
