--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -98,11 +98,11 @@
 
 // Цены
 .camp__section-9
-	// background: #222 url('/img/camp__section-9-min.jpg') no-repeat center
+	background: #222 url('/img/camp__section-9-min.jpg') no-repeat top left
 
 // Оформление
 .camp__section-10
-	// background: #222 url('/img/camp__section-10-min.jpg') no-repeat center
+	background: #222 url('/img/camp__section-10-min.jpg') no-repeat top left
 
 // Что взять с собой
 .camp__section-11
@@ -125,10 +125,10 @@
 		left: 0
 		right: 0
 		bottom: 0
-		background: rgba(0,0,0,0)
+		background: rgba(0,0,0,0.6)
 	&:hover
 		&::before
-			background: rgba(250,250,250, .3)
+			background: rgba(250,250,250, 0)
 	.select
 		position: relative
 		z-index: 1
