Изменён шрифт заголовков с Russo One, на Molot

--- a/sass/_camp.sass
+++ b/sass/_camp.sass
@@ -8,7 +8,7 @@
 
 .h2
 	display: inline-block
-	font-family: 'RussoOne'
+	font-family: 'Molot'
 	font-size: 34px
 	// padding: 0 15px
 	margin-bottom: 20px
