Добавлен логотип, возвращён шрифт Russo One, изменён background top-bar на текстуру дерева

--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -3,9 +3,10 @@
 	top: 0
 	left: 0
 	right: 0
-	background: #222
+	background: #222 url('/img/wood-pattern.jpg')
 	padding: 5px 0
 	z-index: 10
+	box-shadow: 0 0 4px 0 #000
 
 .flex
 	display: flex
@@ -17,6 +18,7 @@
 .logo
 
 .logo__img
+	height: 60px
 	max-height: 60px
 	width: auto
 
