--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -2,5 +2,5 @@
 
 +font-face("RobotoRegular", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
 +font-face("RobotoBold", "../fonts/RobotoBold/RobotoBold", $file-formats: woff woff2 ttf)
-// +font-face("RussoOne", "../fonts/RussoOne/RussoOne", $file-formats: woff woff2 ttf)
-+font-face("Molot", "../fonts/Molot/Molot", $file-formats: woff woff2 ttf)
++font-face("RussoOne", "../fonts/RussoOne/RussoOne", $file-formats: woff woff2 ttf)
+// +font-face("Molot", "../fonts/Molot/Molot", $file-formats: woff woff2 ttf)
