--- a/sass/header.sass
+++ b/sass/header.sass
@@ -52,6 +52,7 @@ body
 		background: $color-accent
 
 .content
+	// background: #222 url('/img/wood-pattern.jpg')
 	background: rgba(0, 0, 0, .5)
 	color: #fff
 	max-width: 500px
@@ -63,7 +64,7 @@ body
 
 .h1
 	display: inline-block
-	font-family: 'Molot'
+	font-family: 'RussoOne'
 	font-size: 38px
 
 .p
