Добавлено выделение активного меню

--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -43,11 +43,12 @@
 			width: 220px
 			left: auto
 
-.sf-menu ul li
+.mnu ul li
 	background: #222
 
-.sf-menu li:hover,
-.sf-menu li.sfHover
+.mnu li:hover,
+.mnu li.sfHover,
+.mnu li.active
 	background: #333
 	only transition out, not in
 	transition: none
