--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -129,12 +129,17 @@
 		right: 0
 		bottom: 0
 		background: rgba(0,0,0,0.6)
+	
 	&:hover
 		&::before
-			background: rgba(250,250,250, 0)
+			background: rgba(0,0,0, 0)
+
 	.select
 		position: relative
 		z-index: 1
+
+a.active::before
+	background: rgba(0,0,0, 0)
 
 @media only screen and (max-width : 768px)
 	.top-bar
