Изменён логотип fixs

--- a/sass/header.sass
+++ b/sass/header.sass
@@ -69,6 +69,7 @@ body
 
 .p
 	text-align: justify
+	word-break: normal
 
 .h1, .p, .scroll-wrap
 	margin-bottom: 20px
@@ -76,7 +77,7 @@ body
 .select, .th
 	background: $color-accent
 	color: #222
-	padding: 0 0.3em
+	padding: .1em .3em
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
