--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -56,7 +56,8 @@
 		color: #fff
 
 .sf-mega
-	background: rgba(0,0,0, .5)
+	background: #222 url('/img/wood-pattern.jpg')
+	// background: rgba(0,0,0, .5)
 	color: #fff
 	padding: 15px
 
