--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -95,7 +95,9 @@
 	margin-top: -12px
 
 
-
+@media only screen and (max-width : 992px)
+	.elem
+		width: 100%
 
 @media only screen and (max-width : 768px)
 	.top-bar
