--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -4,6 +4,7 @@
 	left: 0
 	right: 0
 	background: #222 url('/img/wood-pattern.jpg')
+	background-size: 50%
 	padding: 5px 0
 	z-index: 10
 	box-shadow: 0 0 4px 0 #000
@@ -57,6 +58,7 @@
 
 .sf-mega
 	background: #222 url('/img/wood-pattern.jpg')
+	background-size: 50%
 	// background: rgba(0,0,0, .5)
 	color: #fff
 	padding: 15px
