--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -93,8 +93,8 @@
 			background: #222
 			color: #fff
 
-.sf-mega,.mnu>li>ul
-	margin-top: -12px
+/* .sf-mega,.mnu>li>ul
+	margin-top: -9px */
 
 
 @media only screen and (max-width : 992px)
