--- a/sass/header.sass
+++ b/sass/header.sass
@@ -70,6 +70,9 @@ body
 .p
 	text-align: justify
 	word-break: normal
+	h1, h2, h3
+		display: inline
+
 
 .h1, .p, .scroll-wrap
 	margin-bottom: 20px
