Добавлен индикатор активной секции

--- a/sass/_top-bar.sass
+++ b/sass/_top-bar.sass
@@ -7,7 +7,7 @@
 	background-size: 50%
 	padding: 5px 0
 	z-index: 10
-	box-shadow: 0 0 4px 0 #000
+	box-shadow: 0 2px 4px -2px #000
 
 .flex
 	display: flex
@@ -59,7 +59,7 @@
 .sf-mega
 	background: #222 url('/img/wood-pattern.jpg')
 	background-size: 50%
-	// background: rgba(0,0,0, .5)
+	box-shadow: 0 2px 4px -2px #000
 	color: #fff
 	padding: 15px
 
