--- a/sass/header.sass
+++ b/sass/header.sass
@@ -7,6 +7,7 @@
 @import '../app/libs/jQuery.mmenu-master/dist/css/jquery.mmenu.all.css'
 @import 'top-bar'
 @import 'toggle-mnu'
+@import 'section-indicator'
 @import 'app/libs/font-awesome-4.6.3/sass/font-awesome.sass'
 
 body
