--- a/sass/_section-indicator.sass
+++ b/sass/_section-indicator.sass
@@ -5,12 +5,13 @@
 	right: -8px
 	display: flex
 	align-items: center
-	transition: all .3s
+	transition: all .2s
 	ul
 		background: url('/img/wood-pattern.jpg')
 		padding: 10px
 		border-radius: 20px 0 0 20px
 		box-shadow: -2px 2px 4px -2px #000
+		border-top: 1px solid #DEBE9F
 		li:last-child
 			margin-bottom: 0
 	li
@@ -20,6 +21,8 @@
 		border-radius: 50%
 		margin-bottom: 5px
 		box-shadow: inset 0 1px 2px 0 #000
+		transition: all .2s
+		border-bottom: 1px solid #DEBE9F
 		a
 			display: block
 			height: 100%
