--- a/sass/_section-indicator.sass
+++ b/sass/_section-indicator.sass
@@ -7,11 +7,11 @@
 	align-items: center
 	transition: all .2s
 	ul
-		background: url('/img/wood-pattern.jpg')
-		padding: 10px
+		background: #222 url('/img/wood-pattern.jpg')
 		border-radius: 20px 0 0 20px
-		box-shadow: -2px 2px 4px -2px #000
 		border-top: 1px solid #DEBE9F
+		box-shadow: -2px 2px 4px -2px #000
+		padding: 10px
 		li:last-child
 			margin-bottom: 0
 	li
