--- a/sass/main.sass
+++ b/sass/main.sass
@@ -3,6 +3,7 @@
 
 //Load Libs SASS
 @import 'app/libs/animate/animate.sass'
+@import 'app/libs/Magnific-Popup-master/dist/magnific-popup.sass'
 
 *::-webkit-input-placeholder
 	color: #666
