Закончена страница — Забронировать домик

--- a/sass/_hut.sass
+++ b/sass/_hut.sass
@@ -5,7 +5,7 @@
 	min-height: 600px
 
 .section__hut-1
-	background: #fff	url('../img/hut__section-1.jpg') no-repeat center
+	background: #fff	url('../img/sosnovyj-bor__header-bg.jpg') no-repeat center
 
 .section__hut-2
 	background: #fff	url('../img/hut__section-2.jpg') no-repeat center
@@ -14,7 +14,10 @@
 	background: #fff	url('../img/hut__section-3.jpg') no-repeat center
 
 .section__hut-4
-	background: #fff	url('../img/hut__section-4.jpg') no-repeat center
+	background: #fff	url('../img/hut__section-4.jpg') no-repeat center 55%
+
+.section__hut-5
+	background: #fff	url('../img/hut__section-5.jpg') no-repeat center 65%
 
 .section__hut-6
 	background: #fff	url('../img/hut__section-6.jpg') no-repeat center
